# QA-Assistant

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 82fbefa0697b_add_first_last_name_to_users.py  c593f029649c_init_migration.py
charts/qa-assistant/: Chart.yaml  values.yaml
charts/qa-assistant/templates/: deployment.yaml
qa_assistant/: bot.py  main.py  settings.py
qa_assistant/providers/: base.py
qa_assistant/repositories/: user.py
qa_assistant/services/: pdf.py
qa_assistant/utils/: db.py
