[project]
name = "qa-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "granian>=2.5.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "mypy",
    "ruff",
    "types-fpdf2",
]

[tool.ruff]
target-version = "py313"
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "EM",
    "FBT",
    "TRY003",
    "D1",
    "D203",
    "D213",
    "G004",
    "FA",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["S101", "S311"]

[tool.pytest.ini_options]
addopts = '--cov=. -p no:warnings --cov-report term-missing --ignore=tests/test_migrations.py'

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
omit = ["*/migrations/*", "tests/test_migrations.py", "bin/*"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]